# daily_report

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml
configs/report_templates/: daily_brief.md  daily_standard.md  daily_technical.md
docs/: README.md  architecture.md  browser_events.md  daily_report_product_definition.md  integration-api-v1.md  phase0_tauri_fastapi_check_report.md  phase1_source_adapter_report.md  phase2_phase3_unified_browser_check_report.md  phase2_phase3_unified_browser_report.md
docs/architecture/: browser-data-source.md  data-governance.md
docs/product/: ux-design.md  ux-prototype-specification.md
docs/prompts/: ux-prototype-agent-prompt.md
docs/reports/phase-0/: acceptance.md
docs/reports/phase-2-3/: browser-events-implementation.md
edge_extension/: README.md  content_script.js  manifest.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css
frontend/src/api/: bridge.ts  client.ts  desktop.ts  entries.ts  health.ts  mock.ts  overview.ts  reportWorkbench.ts  reports.ts  runtime.ts  runtimeCenter.ts  settings.ts  timeline.ts  types.ts
frontend/src/api/bridgeAdapters/: fallback.ts  http.ts  mock.ts  qwebchannel.ts  shared.ts  tauri.ts
frontend/src/components/: AppCard.vue  AppDataTable.vue  AppPagination.vue  AppSegmentedTabs.vue  ChartCard.vue  DataTable.vue  DateRangeFilter.vue  DateRangePicker.vue  EmptyState.vue  FeaturePlaceholder.vue  IconBadge.vue  KpiCard.vue  LoadingState.vue  MarkdownPreview.vue  Sidebar.vue  StatCard.vue  StatusBadge.vue  TopBar.vue
frontend/src/components/app-profiles/: AppCategoryPanel.vue  AppProfileListPanel.vue  AppProfileOverview.vue
frontend/src/components/data-center/: CategoryTag.vue  DataAnalysisView.vue  DataCenterFilterBar.vue  LazyChartCard.vue  RecordActionButtons.vue  RecordDetailDrawer.vue  SensitiveTag.vue  SourceBadge.vue  TimelineInfiniteList.vue  TimelineRecordItem.vue  types.ts
frontend/src/components/report-workbench/: FinalPromptPreviewCard.vue  GenerateReportPane.vue  GenerateStepSidebar.vue  HistoryReportPane.vue  MaterialCandidateList.vue  MaterialOrganizedPreview.vue  MaterialSelectionCard.vue  PromptConfigCard.vue  PromptOrganizedPreview.vue  PromptPreviewDrawer.vue  ReportHistoryDetail.vue  ReportHistoryList.vue  ReportResultPreviewCard.vue  ReportWorkbenchTabs.vue  ReportWorkbenchTopbar.vue  SubmitSummaryCard.vue  TemplateManagerDrawer.vue
frontend/src/components/runtime/: RuntimeLoadingOverlay.vue
frontend/src/components/settings/: RuntimeCenter.vue  SettingsField.vue  SettingsSection.vue
frontend/src/composables/: useAppProfileCache.ts  useSettingsTabSync.ts  useTodayOverviewData.ts
frontend/src/layouts/: AppShell.vue  PageLayout.vue
frontend/src/pages/: AppProfiles.vue  AppProfilesPage.vue  DashboardPage.vue  DataCenter.vue  DataCenterPage.vue  ReportHistoryPage.vue  ReportWorkbench.vue  ReportWorkbenchPage.vue  RuntimeCenter.vue  Settings.vue  SettingsPage.vue  TodayOverview.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  dashboard.ts  entries.ts  overview.ts  report.ts  reportWorkbench.ts  reports.ts  settings.ts  timeline.ts
frontend/src/types/: api.ts  entries.ts  overview.ts  reportWorkbench.ts  reports.ts  settings.ts  timeline.ts
frontend/src/utils/: appProfiles.ts  date.ts  format.ts  settings.ts  todayOverview.ts
scripts/: bootstrap.ps1  set_collector_state.ps1  show_notification.ps1  start_collector.cmd  start_collector.ps1  stop_collector.cmd  stop_collector.ps1  test_collector.py  test_db.py  yasb_status.cmd  yasb_status.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  runtime.rs  sidecar.rs
src/daily_report/: main.py
src/daily_report/api/: __init__.py  app.py  deps.py  response.py  schemas.py  server.py
src/daily_report/api/routes/: __init__.py  browser_events.py  desktop.py  entries.py  gui.py  health.py  overview.py  reports.py  (+3 more)
src/daily_report/collector/: ai_prompt_receiver.py  app_session_collector.py  base_collector.py  clipboard_collector.py  collector_manager.py  edge_history_collector.py  foreground_collector.py
src/daily_report/config/: __init__.py  local_settings.py  paths.py
src/daily_report/domain/: __init__.py  category.py  sensitivity.py
src/daily_report/gui/: app.py  assets.py  bridge.py  data_provider.py  main_window.py  test_gui.py  theme.py  web_app.py  web_window.py  widgets.py  worker.py
src/daily_report/gui_launcher/: __init__.py  pyside_launcher.py  tauri_launcher.py
src/daily_report/integration_v1/: __init__.py  app.py  fixtures.py  projection.py  revision.py  server.py
src/daily_report/reporter/: __init__.py  debug_main.py  deepseek_client.py  material_card.py  prompt_builder.py
src/daily_report/service/: app.py  app_profile_service.py  browser_event_service.py  category.py  cleanup.py  cleanup_service.py  collector_manager.py  data_provider.py  desktop_service.py  material_service.py  overview_service.py  report_service.py  runtime_process_service.py  sensitivity.py  settings_service.py  single_instance.py  timeline_service.py
src/daily_report/sources/: __init__.py  ai_prompt_source.py  aliases.py  app_source.py  base.py  bilibili_source.py  browser_event_source.py  browser_source.py  clipboard_source.py  registry.py
src/daily_report/storage/: database.py  repositories.py  schema.sql
src/daily_report/yasb_bridge/: collector_state.py  collector_status.py  status.py  usage_status.py
tests/: test_browser_events.py  test_dependency_boundaries.py  test_desktop_api.py  test_domain_tools.py  test_gui_launchers.py  test_integration_v1_boundaries.py  test_integration_v1_cli.py  test_integration_v1_contract.py  test_integration_v1_live_process.py  test_integration_v1_projection.py  test_integration_v1_server.py  test_mvp_storage_and_prompt.py  test_runtime_process_service.py  test_source_adapters.py
tests/fixtures/: integration_v1_daily_contract.json
(+34 files in other folders)
