[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-report"
version = "0.1.0"
description = "Windows desktop tool for collecting local activity traces and generating daily reports."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
    "PySide6>=6.9,<6.12",
    "PySide6-WebEngine>=6.9,<6.12",
]
keywords = ["daily-report", "productivity", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
daily-report = "daily_report.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daily_report = ["storage/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"
