[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-report"
version = "0.1.0"
description = "Local Windows activity timeline collector and AI Markdown daily report generator."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
    "PySide6>=6.9,<6.12",
    "uvicorn>=0.29"
]
keywords = ["daily-report", "productivity", "windows", "sqlite", "pyside6", "vue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/yqbu/daily_report"
Repository = "https://github.com/yqbu/daily_report"
Issues = "https://github.com/yqbu/daily_report/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
daily-report = "daily_report.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
daily_report = ["storage/*.sql"]

[tool.setuptools.data-files]
"share/daily-report/configs" = ["configs/*.yaml"]
"share/daily-report/configs/report_templates" = ["configs/report_templates/*.md"]
"share/daily-report/edge_extension" = [
    "edge_extension/*.js",
    "edge_extension/*.json",
    "edge_extension/*.md",
]
"share/daily-report/frontend/dist" = ["frontend/dist/index.html"]
"share/daily-report/frontend/dist/assets" = ["frontend/dist/assets/*"]
"share/daily-report/scripts" = ["scripts/*.cmd", "scripts/*.ps1"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [
    ".git",
    ".idea",
    ".pytest_cache",
    ".pytest_tmp",
    ".ruff_cache",
    ".venv",
    "build",
    "data",
    "dist",
    "frontend/dist",
    "frontend/node_modules",
    "logs",
    "output",
    "tmp_pytest",
    "tmp_pytest_*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
