[package]
name = "daily-report-tauri"
version = "0.1.0"
description = "Daily Report desktop shell"
authors = ["yqbu"]
edition = "2021"

[[bin]]
name = "daily-report"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
